data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3374.wast
;; 3. **Recursive Function with Mismatched Stack Operations**:    - **Description**: Create a recursive function where each call doesn't properly manage the stack (pushing more values than popping, or vice versa) leading to an imbalance.    - **Reason**: This tests proper handling of stack operations and type checks within recursive calls. Incorrect handling can lead to conditions perpetuating an infinite loop.

(assert_invalid
  (module
    (func $recursive-stack-mismatch (param i32) (result i32)
      (if (i32.eqz (local.get 0))
        (then (i32.const 1))
        (else
          (local.get 0)
          (i32.const 1)
          (i32.add)
          (call $recursive-stack-mismatch)
          (i32.const 2)
        )
      )
    )
  )
  "type mismatch"
)